# internal/app/rest_api_v2/docs/swagger.yaml
@@ -818,6 +818,13 @@ definitions:
       snapshot_name:
         type: string
     type: object
+  handlers.JailDnsInput:
+    properties:
+      dns_server:
+        type: string
+      search_domain:
+        type: string
+    type: object
   handlers.JailShells:
     properties:
       available_shells:
@@ -1972,6 +1979,37 @@ paths:
       security:
       - BasicAuth: []
       summary: Update Jails's description.
+      tags:
+      - Jails
+  /jail/settings/dns/{jail_name}:
+    post:
+      description: 'Modify Jail''s DNS settings.<br>`AUTH`: Only `rest` user is allowed.'
+      parameters:
+      - description: Jail Name
+        in: path
+        name: jail_name
+        required: true
+        type: string
+      - description: Request payload
+        in: body
+        name: Input
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.JailDnsInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.SwaggerSuccess'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.SwaggerError'
+      security:
+      - BasicAuth: []
+      summary: Modify Jail's DNS settings.
       tags:
       - Jails
   /jail/settings/production/{jail_name}/{production}:
